--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,8 @@ body {
 	--site-font-size: 16px;
 	--site-line-spacing: 2rem;
 	--spacing-small: 4px;
-	--spacing-large: 8px;
+	--spacing-large: 12px;
+	--ascii-font-size: 8px;
 
 	background-color: black;
 	font-family: 'cascadia-mono', 'levi-regular', serif;
@@ -33,6 +34,7 @@ body {
 		--site-line-spacing: 3rem;
 		--spacing-small: 8px;
 		--spacing-large: 24px;
+		--ascii-font-size: 12px;
 	
 		background-color: black;
 		font-family: 'cascadia-mono', 'levi-regular', serif;
@@ -50,6 +52,14 @@ body {
 .prompt, .response, #intro-response {
 	margin-left: 2%;
 	margin-right: 2%;
+}
+
+.ascii-banner {
+	margin-top: var(--spacing-large);
+	margin-left: 2%;
+	margin-right: 2%;
+	font-size: var(--ascii-font-size);
+	line-height: 0.6em;
 }
 
 .pwd, .response, #intro-pwd {
