--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-body {
+:root {
 	--terminal-black: #000000;
 	--terminal-red: #e6193c;
 	--terminal-green: #01a252;
@@ -7,6 +7,9 @@ body {
 	--terminal-magenta: #e16a98;
 	--terminal-cyan: #72d3e7;
 	--terminal-white: #ffffff;
+}
+
+body {
 	--site-font-size: 16px;
 	--site-line-spacing: 2rem;
 	--spacing-small: 4px;
@@ -14,7 +17,7 @@ body {
 	--ascii-font-size: 8px;
 
 	background-color: black;
-	font-family: 'cascadia-mono', 'levi-regular', serif;
+	font-family: 'cascadia-mono', serif;
 	color: var(--terminal-green);
 	font-size: var(--site-font-size);
 	line-height: var(--site-line-spacing);
@@ -22,14 +25,6 @@ body {
 
 @media only screen and (min-width: 768px) {
 	body {
-		--terminal-black: #000000;
-		--terminal-red: #e6193c;
-		--terminal-green: #01a252;
-		--terminal-yellow: #c3c322;
-		--terminal-blue: #01a0e4;
-		--terminal-magenta: #e16a98;
-		--terminal-cyan: #72d3e7;
-		--terminal-white: #ffffff;
 		--site-font-size: 24px;
 		--site-line-spacing: 3rem;
 		--spacing-small: 8px;
@@ -37,7 +32,7 @@ body {
 		--ascii-font-size: 12px;
 	
 		background-color: black;
-		font-family: 'cascadia-mono', 'levi-regular', serif;
+		font-family: 'cascadia-mono', serif;
 		color: var(--terminal-green);
 		font-size: var(--site-font-size);
 		line-height: var(--site-line-spacing);
@@ -60,6 +55,10 @@ body {
 	margin-right: 2%;
 	font-size: var(--ascii-font-size);
 	line-height: 0.6em;
+}
+
+.ascii-banner > pre {
+	font-family: 'dos-font' !important;
 }
 
 .pwd, .response, #intro-pwd {
@@ -123,7 +122,7 @@ input[type=text] {
 	border: none;
 	background-color: black;
 	width: 0px;
-	font-family: 'levi-regular', serif;
+	font-family: 'cascadia-mono', serif;
 	transition: width 0.5s;
 	font-size: var(--site-font-size);
 	color: transparent;
